syntax = "proto3";
import "google/protobuf/descriptor.proto";

extend google.protobuf.ServiceOptions
{
    // 整个service是否是内部私有
    bool is_all_private = 40001;
    // 整个service都是默认实现的service前缀
    string all_service_prefix = 40002;
}

extend google.protobuf.MethodOptions
{
    // rpc对应的cmd
    uint32 cmd = 40001;
    // 超时时间，毫秒
    uint32 timeout = 40002;
    // 是否内部私有rpc
    bool is_private = 40003;
    // 是否接受广播
    bool broadcast = 40004;
    // 单个method实现的service前缀
    string service_prefix = 40005;
}
